Replace some calls to deprecated Class.newInstance...
https://github.com/arianne/stendhal/issues/410