@@ -214,7 +214,7 @@ public class Bootstrap {
 				// start update handling
 				final Class< ? > clazz = classLoader.loadClass("games.stendhal.client.update.UpdateManager");
 				final Method method = clazz.getMethod("process", String.class, Properties.class, Boolean.class, ClassLoader.class);
-				method.invoke(clazz.newInstance(), jarFolder, bootProp, initialDownload, classLoader);
+				method.invoke(clazz.getDeclaredConstructor().newInstance(), jarFolder, bootProp, initialDownload, classLoader);
 			} catch (final SecurityException e) {
 				throw e;
 			} catch (final Exception e) {
